# jido-conductor

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONDUCTOR-COMPARISON.md  CONDUCTOR-JSON-GUIDE.md  CONTRIBUTING.md  DOGFOOD-FINDINGS.md  README.md  package.json
.github/workflows/: build-release.yml  ci.yml  release.yml  semantic-release.yml
.husky/: pre-commit
agent_service/: .credo.exs  .formatter.exs  mix.exs
agent_service/config/: config.exs  dev.exs  prod.exs  test.exs
agent_service/lib/: agent_service_web.ex
agent_service/lib/agent_service/: application.ex  repo.ex  runs.ex  templates.ex
agent_service/lib/agent_service/actions/: claude_chat.ex  execute_workflow.ex  fetch_url.ex  save_artifact.ex
agent_service/lib/agent_service_web/: auth.ex  endpoint.ex  router.ex
agent_service/test/: README.md
agent_service/test/agent_service/: runs_test.exs
app/: .eslintrc.json  eslint.config.mjs  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Layout.tsx
app/src/hooks/: use-toast.ts
app/src/lib/: api.ts  store.ts
app/src/pages/: Configure.tsx  Dashboard.tsx  RunDetails.tsx  Runs.tsx  Settings.tsx  Templates.tsx
docs/: README.md  api-reference.md  architecture.md  getting-started.md
scripts/: dev.sh  setup.sh
templates/monitor-web/: jido-template.yaml
(+23 files in other folders)
